# bee

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Trunk.toml  docker-compose.yaml  index.html  input.css  justfile  nginx.conf  package.json  pnpm-lock.yaml
assets/: words.txt
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  nginx.conf  pnpm-lock.yaml
frontend/assets/: border-animation.mjs
frontend/src/: game.rs  main.rs  management.rs
migrations/: 0001_add_words_table.down.sql  0001_add_words_table.up.sql
puzzle-config/: Cargo.toml
puzzle-config/src/: lib.rs
script/: build_words.rb  deploy
search/: Cargo.toml
search/src/: lib.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  puzzle_config.rs  responses.rs  services.rs
server/src/handlers/: management.rs  puzzle_config.rs  words.rs
src/: main.rs
utils/build-word-db/: Cargo.toml
utils/build-word-db/src/: main.rs
utils/mask/: Cargo.toml
utils/mask/src/: main.rs
words/: Cargo.toml
words-list/: Cargo.toml
words-list/src/: lib.rs
words/src/: lib.rs
