[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", default-features = false, features = ["std", "iana-time-zone", "now"] }
dashmap = "6.1.0"
puzzle-config = { version = "0.1.0", path = "../puzzle-config" }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["tracing", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["fs"] }
