[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["std", "iana-time-zone", "now"] }
dashmap = "6.1.0"
dotenvy = { version = "0.15.7", default-features = false }
puzzle-config = { version = "0.1.0", path = "../puzzle-config" }
rand = "0.9.1"
search = { version = "0.1.0", path = "../search" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = ["tls-rustls", "postgres", "macros", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["tracing", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
words = { version = "0.1.0", path = "../words" }
words-list = { version = "0.1.0", path = "../words-list" }
